# OOP-virtual-world-game

./: CMakeLists.txt  Loader.cpp  Loader.h  Logger.cpp  Logger.h  Organizm.cpp  Organizm.h  Player.cpp  Player.h  Rosliny.cpp  Rosliny.h  ScrollableList.cpp  ScrollableList.h  Serializer.h  Swiat.cpp  Swiat.h  Wilk.h  WindowManager.cpp  WindowManager.h  Zwierzeta.cpp  Zwierzeta.h  main.cpp
